Fix pointer selection

--- a/src/dcoh_historical.html
+++ b/src/dcoh_historical.html
@@ -21,8 +21,10 @@
             <option value="2023-01-12" selected>2023-01-12</option>
         </select>
     </div>
-    <div id="container" class="container" style="height: calc(100vh - 30px)"></div>
-
+    <div style="display: flex;">
+        <div style="width: 15vw; height: 80vh; background-color: red;"></div>
+        <div id="container" class="container" style="height: calc(80vh - 30px); width: 80vw;"></div>
+    </div>
     <script src="bundle.js">
     </script>
     <script type="text/javascript">
